# django_extra

./: cmd.py  db.sqlite3  lab1.py  lab3.py  lab4.py  lab5.py  pyproject.toml
api/: admin.py  models.py  serialisers.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_product_is_active.py  0003_category_name.py  0004_alter_category_name.py  0005_user.py  0006_orders.py
lab2/: task1.py  task2.py  task4.py  task6.py  task7.py
shop_back/: asgi.py  settings.py  urls.py  wsgi.py
